# scrapebun

./: dev.compose.yml  docker-compose.yml  package.json  pnpm-lock.yaml
api/: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  asgi.py  config.py  pyproject.toml
api/app/: __init__.py
api/app/routes/: __init__.py  api.py
api/app/schemas/: __init__.py  base.py
api/app/schemas/crawl/: crawl_schema.py
api/app/utils/: __init__.py  generate_pydantic_model.py  logger.py  make_config.py  make_request.py
api/routers/: __init__.py  crawl.py
api/routers/crawl/: __init__.py
api/routers/crawl/utils/: __init__.py  chunking.py  json_to_csv.py
api/routers/domain/: __init__.py
core/: app.py  pyproject.toml
core/server/: __init__.py  logger.py  supabase.py
example/: main.py  pyproject.toml
src/app/: layout.tsx  page.tsx
src/styles/: globals.css
web/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts
web/src/: constants.ts  database.types.ts  env.js  instrumentation-client.ts  middleware.ts
web/src/app/: layout.tsx  not-found.tsx  page.tsx
web/src/app/_analytics/: provider.tsx
web/src/app/_components/: animatedCube.tsx  cta.tsx  features.tsx  floating-cube.tsx  floating-sphere.tsx  footer.tsx  hero-section.tsx  navbar.tsx  orbScene.tsx  particle-field.tsx  (+1 more)
web/src/components/: logo.tsx  theme-provider.tsx
web/src/hooks/: use-toast.ts  useTask.ts
web/src/lib/: supabase.ts  types.ts  validators.ts
web/src/styles/: globals.css
(+39 files in other folders)
