[project]
name = "api"
version = "0.1.0"
description = "Backend API for ScrapeBun"
authors = [
    {name = "itsamziii",email = "mohd.amaan1583@gmail.com"}
]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "flask-pydantic (>=0.13.1,<0.14.0)",
    "types-flask (>=1.1.6,<2.0.0)",
    "crawl4ai (>=0.6.2,<0.7.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
