[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai>=0.6.3",
    "fastapi[standard]>=0.115.12",
    "openai>=1.75.0",
    "pydantic-ai-slim[logfire,openai]>=0.2.4",
    "supabase>=2.15.1",
]
